# per4biz-vocalagent

./: .env.example  .gitignore  CLAUDE.md  Per4Biz-PRD-COMPLETO.md  README.md
.claude/agents/: per4biz-architect.md  per4biz-backend-python.md  per4biz-database.md  per4biz-devops.md  per4biz-frontend-pwa.md  per4biz-qa-tdd.md  per4biz-security-oauth.md  per4biz-ui-ux.md  per4biz-voice-engineer.md
.claude/commands/: per4biz-sprint1-kickoff.md
.github/workflows/: backend.yml  frontend.yml
01-prd/: PRD-MASTER.md
02-ultraplan/: ULTRAPLAN-tecnico.md
03-ui-ux/: DESIGN-SPEC.md
04-sprints/: SPRINT-PLAN.md
05-validacao/: VALIDACAO-INTERNA.md
06-addendum/: ACCEPTANCE-CRITERIA.md  CONSTRAINTS-ASSUMPTIONS-OOS.md  ERROR-MATRIX.md  LOGGING-POLICY.md  PRIVACY-POLICY-PT.md  README.md  TESTING-STRATEGY.md
07-v1-scope/: EXECUTION-NOTES.md
backend/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: config.py  deps.py  logging.py  main.py
backend/app/middleware/: __init__.py  session.py
backend/app/routers/: auth.py  calendar.py  contacts.py  emails.py  me.py  voice.py
backend/app/services/: auth_helpers.py  calendar.py  contacts.py  crypto.py  date_parser.py  email_headlines.py  gmail.py  google_oauth.py  retry.py  session_jwt.py  state_jwt.py  supabase_client.py  telemetry.py  voice_intent.py  voice_llm.py  voice_stt.py  voice_tts.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_calendar_date_parse.py  test_crypto.py  test_date_parser.py  test_email_send.py  test_emails_endpoints.py  test_emails_trash.py  test_gmail_service.py  test_health.py  test_logging_redactor.py  test_me_endpoints.py  test_retry.py  test_session_jwt.py  test_session_middleware.py  test_state_jwt.py  test_voice_intent_multi_turn.py  test_voice_llm.py  test_voice_stt.py  test_voice_tts.py
backend/tests/fixtures/: google_oauth_mocks.py  multi_turn_cases.json
backend/tests/voice/: test_telemetry.py  test_telemetry_router.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: auth-token-capture.tsx  bottom-navbar.tsx  email-item.tsx  email-skeleton.tsx  google-g-logo.tsx  mic-button.tsx  pull-to-refresh.tsx  record-modal.tsx  revoke-account-modal.tsx  vox-card.tsx
frontend/lib/: api.ts  chat-store.ts  queries.ts  relative-time.ts  use-media-recorder.ts  utils.ts  voice-api.ts  voice-telemetry.ts
frontend/public/: manifest.json
frontend/tests/: chat-memory.test.tsx  draft.test.tsx  email-item.test.tsx  inbox.test.tsx  relative-time.test.ts  revoke-modal.test.tsx  setup.ts  voice-telemetry.test.ts  (+1 more)
plans/: README.md
specs/: README.md
supabase/: README.md  config.toml
(+38 files in other folders)
